Added resources page

--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
     <div class="nav-container">
         <nav class="navbar">
             <!-- <img src="images/CavBotsLogo.png"> -->
-            <a href="index.html" id="navbar-logo">CavBots 7492</a>
+            <a href='/' id='navbar-logo'>CavBots 7492</a>
             <div class="menu-toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
             <ul class="nav-menu">
-              <li><a href="#" class="nav-links">Home</a></li>  
+              <li><a href="index.html" class="nav-links">Home</a></li>  
               <li><a href="#aboutID" class="nav-links">About</a></li>  
-              <li><a href="seasons.html" class="nav-links">Seasons</a></li>  
-              <li><a href="sponsors.html" class="nav-links">Sponsors</a></li>  
-              <li><a href="outreach.html" class="nav-links">Outreach</a></li>  
-              <li><a href="index.html#contactID" class="nav-links">Contact Us</a></li>  
+              <li><a class='nav-links' href='/seasons.html'>Seasons</a></li>  
+              <li><a class='nav-links' href='/sponsors.html'>Sponsors</a></li>  
+              <li><a class='nav-links' href='/outreach.html'>Outreach</a></li>  
+              <li><a class='nav-links' href='resources.html'>Resources</a></li>  
             </ul>
         </nav>
     </div>
@@ -59,14 +59,14 @@
         <div class="about-container welcome">
             <h1>About Us</h1>
             <h2>We are CavBots...</h2>
-            <p>FRC team 7492 is a high school robotics team based in The Woodlands, 
+            <p>TWCP Cavalier Robotics "CavBots" is a high school robotics team based in The Woodlands, 
                 Texas from The Woodlands College Park High School. Each year, we compete in the 
-                FIRST Robotics Competition, in which teams of students come together to build a 
+                FIRST Robotics Competition, a nationwide event in which teams of students come together to build a 
                 robot that competes in the challenge for that year. CavBots is a student-led FRC 
                 team that is committed to providing our members and community with hands-on STEM 
                 education. We use robotics as an opportunity to show to students that STEM careers 
                 can be enjoyable and rewarding. Although we are a young team, we have grown each season and have 
-                shown in the past we can still be triumphant.</p>
+                shown that we can be triumphant.</p>
         </div>
         <div class="about-container history">
             <button class="about-btn"><a href="/seasons.html">Our History</a></button>
