--- a/seasons.html
+++ b/seasons.html
@@ -15,25 +15,26 @@
     <link rel="apple-touch-icon" href="/images/sword.png">
 </head>
 <body>
-    <!-- NAVMENU -->
-    <div class="nav-container">
-        <nav class="navbar">
-            <a href="index.html" id="navbar-logo">CavBots 7492</a>
-            <div class="menu-toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-            <ul class="nav-menu">
-              <li><a href="index.html" class="nav-links">Home</a></li>  
-              <li><a href="index.html#aboutID" class="nav-links">About</a></li>   
-              <li><a href="#" class="nav-links">Seasons</a></li>  
-              <li><a href="sponsors.html" class="nav-links">Sponsors</a></li>  
-              <li><a href="outreach.html" class="nav-links">Outreach</a></li>  
-              <li><a href="index.html#contactID" class="nav-links">Contact Us</a></li>   
-            </ul>
-        </nav>
-    </div>
+  <!-- NAVMENU -->
+  <div class="nav-container">
+    <nav class="navbar">
+        <!-- <img src="images/CavBotsLogo.png"> -->
+        <a href='/' id='navbar-logo'>CavBots 7492</a>
+        <div class="menu-toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+        <ul class="nav-menu">
+          <li><a href="index.html" class="nav-links">Home</a></li>  
+          <li><a href="#aboutID" class="nav-links">About</a></li>  
+          <li><a class='nav-links' href='/seasons.html'>Seasons</a></li>  
+          <li><a class='nav-links' href='/sponsors.html'>Sponsors</a></li>  
+          <li><a class='nav-links' href='/outreach.html'>Outreach</a></li>  
+          <li><a class='nav-links' href='resources.html'>Resources</a></li>  
+        </ul>
+    </nav>
+</div>
 
     <!-- SEASONS -->
     <div class="seasons">
