--- a/seasons.html
+++ b/seasons.html
@@ -109,7 +109,7 @@
         <div class="timeline-container left">
             <div class="timeline-content">
                 <h2>2023</h2>
-                <img src="images/2022 Team Photo.JPG" alt="pic" id="seasonPic">
+                <img src="images/2023_Team_photo.jpg" alt="pic" id="seasonPic">
                 <img src="images/2023 robot arm extended.jpg" alt="pic" id="seasonPic">
                 <p>In this season, Charged Up, CavBots consisted of 35 team members.
                     We were able to build two robots this year, a practice bot and the competition bot "Kraken".
