--- a/resources.html
+++ b/resources.html
@@ -59,10 +59,15 @@
         <br>
         <h1>Links</h1>
         <p>
-            First Inspires: <a href="https://www.firstinspires.org/">First Inspires</a>
+            <a href="https://www.firstinspires.org/">First Inspires</a>
             <br>
-            First in Texas: <a href="https://firstintexas.org/">First in Texas</a>
+            <a href="https://firstintexas.org/">First in Texas</a>
             <br>
+            <a href="https://www.firstinspires.org/robotics/frc">Request to join</a>
+            <br>
+            <a href="https://waiver.smartwaiver.com/w/jgxftinuew8nmhmnbh49rk/web/?auto_tag=2024">Consent Form</a>
+            <br>
+            <a href="files/Travel Expectations and Conduct.pdf">Travel Expectations</a>
         </p>
     </div>
 
