--- a/sponsors.html
+++ b/sponsors.html
@@ -93,11 +93,20 @@
                 </a>
                 <img alt="pic" src="/images/GarzaMacielIncomeTax.jpg" id="sponsorPic">
 
-                <img alt="pic" src="/images/Alight.png" id="sponsorPic">
+                <a href="https://www.alight.com/">
+                    <img alt="pic" src="/images/Alight.png" id="sponsorPic">
+                </a>
 
-                <img alt="pic" src="/images/forman_watkins.png" id="sponsorPic">
+                <a href="https://www.formanwatkins.com/">
+                    <img alt="pic" src="/images/forman_watkins.png" id="sponsorPic">
+                </a>
+
+                <a href="https://www.ghaasfoundation.org">
+                    <img alt="pic" src="/images/genehaas.jpg" id="sponsorPic">
+                </a>
 
                 <img alt="pic" src="/images/grahamcrestwhitebackground.png" id="sponsorPic">
+
             </div>
         </div>
         <div class="sponsor-item">
