--- a/seasons.html
+++ b/seasons.html
@@ -118,6 +118,20 @@
                 </p>
             </div>
         </div>
+        <div class="timeline-container right">
+            <div class="timeline-content">
+                <h2>2024</h2>
+                <img src="images/2024_Team_photo.jpg" alt="pic" id="seasonPic">
+                <img src="images/sentinelgood.PNG" alt="pic" id="seasonPic">
+                <p>In this season, Crescendo, CavBots consisted of 34 team members.
+                    We built two robots this year, a swerve chassis (Pancake) and a competition robot (Sentinel). We were able to
+                    test a 100% NEO swerve drive with Pancake, which we later implemented in Sentinel. We also invested in an INTEL Realsense D435I global shutter
+                    depth camera paired with an advanced ai-enabled coprocessor. With this setup we successfully implemented one of the first VSLAM systems in FRC
+                    and leveraged it in competition to localize our robot dynamically and in all locations on the playing field. Coupled with AprilTag localization, we were able to accurately shoot while
+                    moving from almost any point on the field. This season, we created a truly cutting-edge robot which implemented equally cutting-edge technology.
+                </p>
+            </div>
+        </div>
     </div>
 
     <!-- FOOTER -->
