--- a/resources.html
+++ b/resources.html
@@ -30,7 +30,7 @@
               <li><a class='nav-links' href='/seasons.html'>Seasons</a></li>  
               <li><a class='nav-links' href='/sponsors.html'>Sponsors</a></li>  
               <li><a class='nav-links' href='/outreach.html'>Outreach</a></li>  
-              <li><a class='nav-links' href='resources.html'>Resources</a></li>  
+              <li><a class='nav-links' href='resources.html'>Join Us</a></li>  
             </ul>
         </nav>
     </div>
@@ -39,36 +39,72 @@
     <!-- HERO SECTION -->
     <div class="outreach">
         <div class="outreach-container">
-            <h1>Resources</h1>
-            <p>Below are some some useful links and emails you can use to learn more about FIRST or 
-                contact our booster club.
+            <h1>Join Us</h1>
+            <p> This page contains all the information necessary to join the team or volunteer!
             </p>
         </div>
     </div>
     
     <div class="resourcesBlurb">
-        <h1>Contact Us</h1>
-        <p> 
-            <br>
-            Official Name: TWCP Cavalier Robotics Booster Club <br>
-            <br>
-            Email: <a href=mailto:"mailto:thecavbotsboosters@gmail.com">thecavbotsboosters@gmail.com</a> <br>
-            <br>
-            Parent Band App: TWCP CavBots Parents
-        </p>
-        <br>
-        <h1>Links</h1>
-        <p>
-            <a href="https://www.firstinspires.org/">First Inspires</a>
-            <br>
-            <a href="https://firstintexas.org/">First in Texas</a>
-            <br>
-            <a href="https://www.firstinspires.org/robotics/frc">Request to join</a>
-            <br>
-            <a href="https://waiver.smartwaiver.com/w/jgxftinuew8nmhmnbh49rk/web/?auto_tag=2024">Consent Form</a>
-            <br>
-            <a href="files/Travel Expectations and Conduct.pdf">Travel Expectations</a>
-        </p>
+        <h1>Join Us</h1>
+        <div class = "resourcesBigTextBoxBackground">
+            <p class="resourcesBigTextBox"> 
+                Thank you for joining CavBots. If you are new to the team, we welcome you to a program that is more than robots and can impact your future. If you are a returning member, we are happy to welcome you back. <br><br>
+                We are meeting on Tuesday and Thursday afternoons during the summer to work on upgrades to the robot from last season and are also working on some off-season projects. This is a great time to meet team members and learn various aspects of our team, including how to CAD, training to use the machines and tools in the lab, and trying your hand at being a robot operator or driver.<br><br>
+                We will be collecting dues in the fall for the spring build and competition season.<br><br>
+                In the fall, we will be having information meetings for students and parents. This is a great time to check out the different areas and see what you like the best. We will also be co-hosting the Remix Competition at the school with another FRC team - Texas Torque. Remix is an off-season event, and a great time for new rookie members to see what happens at a competition.
+            </p>
+        </div>
+    </div>
+
+    <div class="resourcesBlurb">
+        <h1>Students</h1>
+        <div class = "resourcesBigTextBoxBackground">
+            <p class="resourcesBigTextBox"> 
+                Whether a new member or a returning veteran, ALL student team members <b>MUST</b>: <br><br>
+                1. Fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSe9yqsBOKay_OuUdWoJuwsBSO-fof6B19o_-B6ffodQX8_LAw/viewform">FIRST Registration Form</a> <br><br>
+
+                2. Create/Update their profile on the <a href="https://www.firstinspires.org/resource-library/youth-registration-system">First Registration System</a> and Apply to the team (CavBots 7492). <br><br>
+
+                3. Join the TWCP CavBots group on the Band App (invite will be sent once you have registered) <br><br>
+                We are including a link to the <a href="https://www.firstinspires.org/resource-library/youth-protection-policy">Youth Protection Program Guide</a> (YPP) and expect student members and their parents to review it.
+            </p>
+        </div>
+    </div>
+
+    <div class="resourcesBlurb">
+        <h1>Parents</h1>
+        <div class = "resourcesBigTextBoxBackground">
+            <p class="resourcesBigTextBox"> 
+                With the implementation of the YPP, we have additional responsibilities regarding notifying parents. These responsibilities are clearly identified in the Youth Protection Program Guide. FIRST has provided a document that covers many of these items in this sample <a href="https://www.firstinspires.org/sites/default/files/uploads/about/ypp/ypp-notification-guidelines-parents.pdf">Parent Notification Form</a>.<br><br>
+                We will also have a meeting for parents in the fall to discuss YPP and other issues regarding the team. Once your student completes their registration through the Team Information Management System, you will receive an email from FIRST asking you to accept their FIRST Consent and Release Form.<br><br>
+                Team dues are $500 per season. Students that secure any sponsorship(s) of $1000 or more will have their Travel Fees reduced by half. Families that are experiencing financial hardship may have their dues subsidized by our Booster Club, just inform one of the mentors, and the information will be held in confidence. During the season, January through April, we meet often and sometimes have meals brought in. We also try to have water and snacks on hand for the students.<br><br>
+
+                Parents of team members <b>MUST</b> please complete the following:<br><br>
+                1. &nbsp;Review FIRST email and accept the FIRST Consent and Release Form<br><br>
+                2. &nbsp;Join the TWCP CavBots group on the Band App (invite will be sent once you have registered)<br><br>
+                3. &nbsp;Complete the <a href="https://docs.google.com/forms/d/e/1FAIpQLScOFq-AtfnifoaV3LVhs25Qu8R0bwVK5_RJSlJfe1Y1Btfa3g/viewform">Parent/Volunteer Survey</a><br><br>
+                4. &nbsp;Pay Team dues on the <a href="https://my-business-802685.square.site/">Team store</a><br><br>
+            </p>
+        </div>
+    </div>
+
+    <div class="resourcesBlurb">
+        <h1>Parents/Community Volunteers</h1>
+        <div class = "resourcesBigTextBoxBackground">
+            <p class="resourcesBigTextBox"> 
+                There are many ways to volunteer with CavBots. Our parents are one of our best resources. In the past, parents have brought in food, hosted parties, recruited sponsors, and even acted as mentors.<br><br>
+                We have fewer mentors compared to most teams. We invite all parents to consider helping the team in some way. To identify the resources that our parents may bring to the team, please complete our Parent/Volunteer Survey. If there is more than one person in the household that can help, please complete a separate form for the second person. Thank you for your help.<br><br>
+                If you are planning to volunteer with the team, we would also ask you to complete the CISD Volunteer form. Once you have received the Volunteer Application Approved email from CISD, please forward it to <a href="mailto:thecavbotsboosters@gmail.com">thecavbotsboosters@gmail.com</a>.<br><br> 
+                If you plan to Volunteer, please complete the following:<br><br>
+                1. &nbsp;Parent/Volunteer Survey<br><br>
+                2. &nbsp;CISD Volunteer form<br><br>
+                This page is subject to change as FIRST Robotics rolls out the YPP and we learn more about how to comply with these new requirements.<br><br>
+                Our main form of communication will be through the Band App. Once you have registered with the team, we will send you a link to join.<br><br>
+                If you have any questions regarding joining the team or helping as a mentor, please contact our lead mentor Daniel Willinsky (<a href="dwillinsky@conroeisd.net">dwillinsky@conroeisd.net</a>).
+                
+            </p>
+        </div>
     </div>
 
     <footer class="site-footer">
