--- a/sponsors.html
+++ b/sponsors.html
@@ -31,7 +31,7 @@
           <li><a class='nav-links' href='/seasons.html'>Seasons</a></li>  
           <li><a class='nav-links' href='/sponsors.html'>Sponsors</a></li>  
           <li><a class='nav-links' href='/outreach.html'>Outreach</a></li>  
-          <li><a class='nav-links' href='resources.html'>Resources</a></li>  
+          <li><a class='nav-links' href='resources.html'>Join Us</a></li>  
         </ul>
     </nav>
 </div>
