--- a/resources.html
+++ b/resources.html
@@ -97,12 +97,11 @@
                 We have fewer mentors compared to most teams. We invite all parents to consider helping the team in some way. To identify the resources that our parents may bring to the team, please complete our Parent/Volunteer Survey. If there is more than one person in the household that can help, please complete a separate form for the second person. Thank you for your help.<br><br>
                 If you are planning to volunteer with the team, we would also ask you to complete the CISD Volunteer form. Once you have received the Volunteer Application Approved email from CISD, please forward it to <a href="mailto:thecavbotsboosters@gmail.com">thecavbotsboosters@gmail.com</a>.<br><br> 
                 If you plan to Volunteer, please complete the following:<br><br>
-                1. &nbsp;Parent/Volunteer Survey<br><br>
-                2. &nbsp;CISD Volunteer form<br><br>
+                1. &nbsp; <a href="https://docs.google.com/forms/d/e/1FAIpQLScOFq-AtfnifoaV3LVhs25Qu8R0bwVK5_RJSlJfe1Y1Btfa3g/viewform">Parent/Volunteer Survey</a><br><br>
+                2. &nbsp;<a href="https://apps.conroeisd.net/Volunteer/Default.aspx">CISD Volunteer form</a><br><br>
                 This page is subject to change as FIRST Robotics rolls out the YPP and we learn more about how to comply with these new requirements.<br><br>
                 Our main form of communication will be through the Band App. Once you have registered with the team, we will send you a link to join.<br><br>
                 If you have any questions regarding joining the team or helping as a mentor, please contact our lead mentor Daniel Willinsky (<a href="dwillinsky@conroeisd.net">dwillinsky@conroeisd.net</a>).
-                
             </p>
         </div>
     </div>
