--- a/resources.html
+++ b/resources.html
@@ -62,7 +62,7 @@
         <div class = "resourcesBigTextBoxBackground">
             <p class="resourcesBigTextBox"> 
                 Whether a new member or a returning veteran, ALL student team members <b>MUST</b>: <br><br>
-                1. Fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSe9yqsBOKay_OuUdWoJuwsBSO-fof6B19o_-B6ffodQX8_LAw/viewform">FIRST Registration Form</a> <br><br>
+                1. Fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSe9yqsBOKay_OuUdWoJuwsBSO-fof6B19o_-B6ffodQX8_LAw/viewform">Cavbots Registration Form</a> <br><br>
 
                 2. Create/Update their profile on the <a href="https://www.firstinspires.org/resource-library/youth-registration-system">First Registration System</a> and Apply to the team (CavBots 7492). <br><br>
 
