changed wording & sponsor info

--- a/resources.html
+++ b/resources.html
@@ -49,9 +49,12 @@
         <h1>Join Us</h1>
         <div class = "resourcesBigTextBoxBackground">
             <p class="resourcesBigTextBox"> 
-                Thank you for joining CavBots. If you are new to the team, we welcome you to a program that is more than robots and can impact your future. If you are a returning member, we are happy to welcome you back. <br><br>
-                We are meeting on Tuesday and Thursday afternoons during the summer to work on upgrades to the robot from last season and are also working on some off-season projects. This is a great time to meet team members and learn various aspects of our team, including how to CAD, training to use the machines and tools in the lab, and trying your hand at being a robot operator or driver.<br><br>
-                We will be collecting dues in the fall for the spring build and competition season.<br><br>
+                Thank you for joining CavBots. If you are new to the team, we welcome you to a program that is more than robots and can impact your future. If you are a returning member, we are happy to welcome you back.
+                <br><br>
+                We are meeting on Tuesday and Thursday afternoons  from 3pm – 6pm during the off-season (August – December). This is a great time to meet team members and learn various aspects of our team, including how to CAD, training to use the machines and tools in the lab, and trying your hand at being a robot operator or driver.
+                <br><br>
+                We will be collecting dues in the fall for the spring build and competition season.
+                <br><br>
                 In the fall, we will be having information meetings for students and parents. This is a great time to check out the different areas and see what you like the best. We will also be co-hosting the Remix Competition at the school with another FRC team - Texas Torque. Remix is an off-season event, and a great time for new rookie members to see what happens at a competition.
             </p>
         </div>
@@ -78,7 +81,7 @@
             <p class="resourcesBigTextBox"> 
                 With the implementation of the YPP, we have additional responsibilities regarding notifying parents. These responsibilities are clearly identified in the Youth Protection Program Guide. FIRST has provided a document that covers many of these items in this sample <a href="https://www.firstinspires.org/sites/default/files/uploads/about/ypp/ypp-notification-guidelines-parents.pdf">Parent Notification Form</a>.<br><br>
                 We will also have a meeting for parents in the fall to discuss YPP and other issues regarding the team. Once your student completes their registration through the Team Information Management System, you will receive an email from FIRST asking you to accept their FIRST Consent and Release Form.<br><br>
-                Team dues are $500 per season. Students that secure any sponsorship(s) of $1000 or more will have their Travel Fees reduced by half. Families that are experiencing financial hardship may have their dues subsidized by our Booster Club, just inform one of the mentors, and the information will be held in confidence. During the season, January through April, we meet often and sometimes have meals brought in. We also try to have water and snacks on hand for the students.<br><br>
+                Team dues are $250 per season. Students that secure any sponsorship(s) of $1000 or more will have their Travel Fees reduced by half. Families that are experiencing financial hardship may have their dues subsidized by our Booster Club, just inform one of the mentors, and the information will be held in confidence. During the season, January through April, we meet often and sometimes have meals brought in. We also try to have water and snacks on hand for the students.<br><br>
 
                 Parents of team members <b>MUST</b> please complete the following:<br><br>
                 1. &nbsp;Review FIRST email and accept the FIRST Consent and Release Form<br><br>
