--- a/index.html
+++ b/index.html
@@ -81,9 +81,11 @@
           <h6>Send us a message or check out our socials!</h6>
           <div class="social-icons">
             <a href="mailto:thecavbotsboosters@gmail.com" target="_blank" class="fa-solid fa-envelope"></a>
-            <a href="https://www.instagram.com/cavbots_7492/?hl=en" target="_blank" class="fa-brands fa-instagram"></a>
+            <a href="https://www.instagram.com/cavbots_frc_7492/" target="_blank" class="fa-brands fa-instagram"></a>
             <a href="https://github.com/CAVALIER-ROBOTICS" target="_blank" class="fa-brands fa-github"></a>
             <a href="https://www.youtube.com/channel/UCJYdM5ucSG2sFMD3Sy4ARrA" target="_blank" class="fa-brands fa-youtube"></a>
+            <a href="http://www.linkedin.com/in/cavalier-robotics-2b5238197" target="_blank" class="fa-brands fa-linkedin-in"></a>
+            <a href="https://www.facebook.com/cavalierrobotics" target="_blank" class="fa-brands fa-facebook"></a>
         </div>
     </div>
 
