--- a/outreach.html
+++ b/outreach.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleOutreach.css">
-    <link rel-"stylesheet" href="https://use.fontawesome.com/releases/vs.14.0/css/all.css"
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/vs.14.0/css/all.css"
     integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO
     +NBkkk5ghb67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -68,7 +68,7 @@
             <div class="list-content">
                 <h1>Mentoring FLL Teams</h1>
                 <img src="/images/FLL.svg" alt="pic" id="OutreachPic">
-                <p>Currently, we mentor at three different elementary and intermediate public 
+                <p>From 2019 to 2021 we mentored at three different elementary and intermediate public 
                     schools in Houston, Texas. Every one of us has had fantastic experiences 
                     with FIRST, and we need to share that with the children in our community. 
                     We understand that by mentoring FLL teams we are encouraging future STEM leaders. </p>
@@ -93,7 +93,7 @@
             <div class="list-content">
                 <h1>Robot Demos</h1>
                 <img src="/images/RobotDemo.jpg" alt="pic" id="OutreachPic">
-                <p>We do demonstrations of our robot to our school for our team so we can connect 
+                <p>In August of 2022 we did a demonstration of our robot to our school for our team so we can connect 
                     with the students in our school who express an interest in STEM. Our goal is 
                     to encourage our classmates to learn more about robotics and what CavBots represents.</p>
             </div>
@@ -102,7 +102,7 @@
             <div class="list-content">
                 <h1>YMCA Gift Wrapping</h1>
                 <img alt="pic" src="/images/giftwrapping.png" id="OutreachPic">
-                <p>We volunteered with the YMCA at a local church to wrap presents for those in need. Our goal is to make a positive impact 
+                <p>In December of 2023 we volunteered with the YMCA at a local church to wrap presents for those in need. Our goal is to make a positive impact 
                     in our community and the world around us, and helping out at the YMCA was a way of furthering that goal.</p>
             </div>
         </div>
@@ -110,7 +110,7 @@
             <div class="list-content">
                 <h1>Cars and Coffee</h1>
                 <img alt="pic" src="/images/coffecars_setup_good.jpg" id="OutreachPic">
-                <p>We put on a demonstration of our robot at Woodforest Bank Stadium during the Cars and Coffee car show. 
+                <p>In April of 2023 we put on a demonstration of our robot at Woodforest Bank Stadium during the Cars and Coffee car show. 
                     We were able to introduce many of our peers to STEM and robotics, which drummed up interest in our team as well as STEM as a whole.</p>
             </div>
         </div>
@@ -118,7 +118,7 @@
             <div class="list-content">
                 <h1>SNHS Day Camp</h1>
                 <img alt="pic" src="/images/krakenandunsuspectingchild.png" id="OutreachPic">
-                <p>We participated in a day camp for local schoolchildren in order to educate these young people about our team, what we do, and STEM as a whole.</p>
+                <p>In April of 2023 we participated in a day camp for local schoolchildren in order to educate these young people about our team, what we do, and STEM as a whole.</p>
             </div>
         </div>
     </div>
