--- a/outreach.html
+++ b/outreach.html
@@ -51,6 +51,76 @@
     <div class="outreachList">
         <div class="outreachList-item left">
             <div class="list-content">
+                <h1>Heart Walk</h1>
+                <img src="/images/" alt="pic" id="OutreachPic">
+                <p></p>
+            </div>
+        </div>
+        <div class="outreachList-item right">
+            <div class="list-content">
+                <h1>FTC Event</h1>
+                <img src="/images/" alt="pic" id="OutreachPic">
+                <p></p>
+            </div>
+        </div>
+        <div class="outreachList-item left">
+            <div class="list-content">
+                <h1>Homecoming Parade</h1>
+                <img src="/images/" alt="pic" id="OutreachPic">
+                <p></p>
+            </div>
+        </div>
+        <div class="outreachList-item right">
+            <div class="list-content">
+                <h1>Camp Cavalier</h1>
+                <img src="/images/" alt="pic" id="OutreachPic">
+                <p></p>
+            </div>
+        </div>
+        <div class="outreachList-item left">
+            <div class="list-content">
+                <h1>SNHS Day Camp</h1>
+                <img src="/images/" alt="pic" id="OutreachPic">
+                <p></p>
+            </div>
+        </div>
+        <div class="outreachList-item right">
+            <div class="list-content">
+                <h1>Autism Awareness Celebration</h1>
+                <img src="/images/" alt="pic" id="OutreachPic">
+                <p></p>
+            </div>
+        </div>
+        <div class="outreachList-item left">
+            <div class="list-content">
+                <h1>Cars and Coffee</h1>
+                <img src="/images/" alt="pic" id="OutreachPic">
+                <p></p>
+            </div>
+        </div>
+        <div class="outreachList-item right">
+            <div class="list-content">
+                <h1>Girl Scout Tour</h1>
+                <img src="/images/" alt="pic" id="OutreachPic">
+                <p></p>
+            </div>
+        </div>
+        <div class="outreachList-item left">
+            <div class="list-content">
+                <h1>SHSU Engineering Technology Visit</h1>
+                <img src="/images/SHSUVisit.png" alt="pic" id="OutreachPic">
+                <p> On May of 2023, </p>
+            </div>
+        </div>
+        <div class="outreachList-item right">
+            <div class="list-content">
+                <h1>Camp Cavalier</h1>
+                <img src="/images/CampCav2023.JPG" alt="pic" id="OutreachPic">
+                <p></p>
+            </div>
+        </div>
+        <div class="outreachList-item left">
+            <div class="list-content">
                 <h1>OpenAlliance Build Blog</h1>
                 <img src="/images/OpenAll.svg" alt="pic" id="OutreachPic">
                 <p>We created a public build blog for several reasons - primarily, we believe 
@@ -68,7 +138,7 @@
             <div class="list-content">
                 <h1>Mentoring FLL Teams</h1>
                 <img src="/images/FLL.svg" alt="pic" id="OutreachPic">
-                <p>From 2019 to 2021 we mentored at three different elementary and intermediate public 
+                <p>Currently, we mentor at three different elementary and intermediate public 
                     schools in Houston, Texas. Every one of us has had fantastic experiences 
                     with FIRST, and we need to share that with the children in our community. 
                     We understand that by mentoring FLL teams we are encouraging future STEM leaders. </p>
@@ -93,7 +163,7 @@
             <div class="list-content">
                 <h1>Robot Demos</h1>
                 <img src="/images/RobotDemo.jpg" alt="pic" id="OutreachPic">
-                <p>In August of 2022 we did a demonstration of our robot to our school for our team so we can connect 
+                <p>We do demonstrations of our robot to our school for our team so we can connect 
                     with the students in our school who express an interest in STEM. Our goal is 
                     to encourage our classmates to learn more about robotics and what CavBots represents.</p>
             </div>
@@ -102,7 +172,7 @@
             <div class="list-content">
                 <h1>YMCA Gift Wrapping</h1>
                 <img alt="pic" src="/images/giftwrapping.png" id="OutreachPic">
-                <p>In December of 2023 we volunteered with the YMCA at a local church to wrap presents for those in need. Our goal is to make a positive impact 
+                <p>We volunteered with the YMCA at a local church to wrap presents for those in need. Our goal is to make a positive impact 
                     in our community and the world around us, and helping out at the YMCA was a way of furthering that goal.</p>
             </div>
         </div>
@@ -110,7 +180,7 @@
             <div class="list-content">
                 <h1>Cars and Coffee</h1>
                 <img alt="pic" src="/images/coffecars_setup_good.jpg" id="OutreachPic">
-                <p>In April of 2023 we put on a demonstration of our robot at Woodforest Bank Stadium during the Cars and Coffee car show. 
+                <p>We put on a demonstration of our robot at Woodforest Bank Stadium during the Cars and Coffee car show. 
                     We were able to introduce many of our peers to STEM and robotics, which drummed up interest in our team as well as STEM as a whole.</p>
             </div>
         </div>
@@ -118,7 +188,7 @@
             <div class="list-content">
                 <h1>SNHS Day Camp</h1>
                 <img alt="pic" src="/images/krakenandunsuspectingchild.png" id="OutreachPic">
-                <p>In April of 2023 we participated in a day camp for local schoolchildren in order to educate these young people about our team, what we do, and STEM as a whole.</p>
+                <p>We participated in a day camp for local schoolchildren in order to educate these young people about our team, what we do, and STEM as a whole.</p>
             </div>
         </div>
     </div>
