Update outreach events with dates and images

--- a/outreach.html
+++ b/outreach.html
@@ -52,71 +52,71 @@
         <div class="outreachList-item left">
             <div class="list-content">
                 <h1>Heart Walk</h1>
-                <img src="/images/" alt="pic" id="OutreachPic">
-                <p></p>
+                <img src="/images/Corazón.jpg" alt="pic" id="OutreachPic">
+                <p>In Noveber of 2024, </p>
             </div>
         </div>
         <div class="outreachList-item right">
             <div class="list-content">
                 <h1>FTC Event</h1>
-                <img src="/images/" alt="pic" id="OutreachPic">
-                <p></p>
+                <img src="/images/FTCYEAH.jpg" alt="pic" id="OutreachPic">
+                <p>During October and December of 2024, </p>
             </div>
         </div>
         <div class="outreachList-item left">
             <div class="list-content">
                 <h1>Homecoming Parade</h1>
-                <img src="/images/" alt="pic" id="OutreachPic">
-                <p></p>
+                <img src="/images/Homecoming.png" alt="pic" id="OutreachPic">
+                <p>In September of 2024, </p>
             </div>
         </div>
         <div class="outreachList-item right">
             <div class="list-content">
                 <h1>Camp Cavalier</h1>
-                <img src="/images/" alt="pic" id="OutreachPic">
-                <p></p>
+                <img src="/images/CC2024.png" alt="pic" id="OutreachPic">
+                <p>In August of 2024, </p>
             </div>
         </div>
         <div class="outreachList-item left">
             <div class="list-content">
                 <h1>SNHS Day Camp</h1>
-                <img src="/images/" alt="pic" id="OutreachPic">
-                <p></p>
+                <img src="/images/SNHSCamp.png" alt="pic" id="OutreachPic">
+                <p>In April of 2024, </p>
             </div>
         </div>
         <div class="outreachList-item right">
             <div class="list-content">
                 <h1>Autism Awareness Celebration</h1>
-                <img src="/images/" alt="pic" id="OutreachPic">
-                <p></p>
+                <img src="/images/Autism.jpeg" alt="pic" id="OutreachPic">
+                <p>In April of 2024, </p>
             </div>
         </div>
         <div class="outreachList-item left">
             <div class="list-content">
                 <h1>Cars and Coffee</h1>
-                <img src="/images/" alt="pic" id="OutreachPic">
-                <p></p>
+                <img src="/images/Happy.JPG" alt="pic" id="OutreachPic">
+                <p>In October of 2023, </p>
             </div>
         </div>
         <div class="outreachList-item right">
             <div class="list-content">
                 <h1>Girl Scout Tour</h1>
-                <img src="/images/" alt="pic" id="OutreachPic">
-                <p></p>
+                <img src="/images/GirlScoutsOminous.png" alt="pic" id="OutreachPic">
+                <p>In October of 2023, </p>
             </div>
         </div>
         <div class="outreachList-item left">
             <div class="list-content">
                 <h1>SHSU Engineering Technology Visit</h1>
                 <img src="/images/SHSUVisit.png" alt="pic" id="OutreachPic">
-                <p> On May of 2023, </p>
+                <p> In May of 2023, </p>
             </div>
         </div>
         <div class="outreachList-item right">
             <div class="list-content">
                 <h1>Camp Cavalier</h1>
                 <img src="/images/CampCav2023.JPG" alt="pic" id="OutreachPic">
-                <p></p>
+                <p>In July of 2023, </p>
             </div>
         </div>
         <div class="outreachList-item left">
